# ABCA

./: .gitignore  LICENSE  README.md  abca.opam  dune-project  run_cellular_automaton.sh  run_zoospores_empirical.sh  run_zoospores_hmm.sh
core/: cell.ml  cell.mli  dune  engine.ml  engine.mli  grid.ml  grid.mli  initial_geometry.ml  initial_geometry.mli  rng.ml  rng.mli  rule.ml  rule.mli  simulation.ml  simulation.mli
docs/: abca-structure.md  command-line.md  plugins.md  zoospores.md
io/: agent_trace.ml  agent_trace.mli  binary.ml  binary.mli  dune  metadata.ml  metadata.mli  xml.ml  xml.mli
models/: dune  model.ml  model.mli  registry.ml  registry.mli
palette/: builtin.ml  cividis.ml  color.ml  color.mli  cyclic.ml  dune  fire.ml  grayscale.ml  heat.ml  inferno.ml  magma.ml  plasma.ml  register.ml  template.ml  tol_bright.ml  tol_high_contrast.ml  tol_muted.ml  tol_prgn.ml  tol_prgn_binary.ml  tol_vibrant.ml  viridis.ml
plugin_registry/: dune  register_plugins.ml
plugins/cyclic/: cyclic.ml  dune
plugins/generations/: dune  generations.ml
plugins/hyphae/: dune  hyphae.ml  hyphae.rules
plugins/larger_than_life/: dune  larger_than_life.ml
plugins/life/: dune  life.ml
plugins/weighted_life/: dune  weighted_life.ml
plugins/zoospores/: abca_local_parameters_for_plugin.csv  dune  zoospores.ml  zoospores.rules  zoospores_empirical.ml
render/: dune  png.ml  png.mli  video.ml  video.mli
trajectory_analysis/: settings.conf  zoospore_trajectory_analysis.sh
visualization/: characterize_zoospore_trajectories.py  characterize_zoospore_trajectories.sh
(+33 files in other folders)
