(lang dune 3.17)

(name abca)

(generate_opam_files true)

(package
 (name abca)
 (synopsis "Agent-Based Cellular Automata framework")
 (description "ABCA is a modular simulation framework for discrete spatial systems, ranging from classical cellular automata to biologically inspired agent-based models.")
 (license MIT)
 (authors "Edouard Evangelisti"))
