(lang dune 3.17)

(name abca)

(generate_opam_files true)

(source
 (github EEvangelisti/ABCA))

(license MIT)

(authors "Edouard Evangelisti")

(maintainers "Edouard Evangelisti")

(package
 (name abca)
 (synopsis "Agent-Based Cellular Automata framework")
 (description
  "A modular simulation framework for discrete spatial systems, ranging from classical cellular automata to biologically inspired agent-based models.")
 (homepage "https://github.com/EEvangelisti/ABCA")
 (bug_reports "https://github.com/EEvangelisti/ABCA/issues")
 (documentation "https://github.com/EEvangelisti/ABCA")
 (tags
  ("cellular-automata"
   "agent-based"
   "simulation"
   "biology"
   "modelling")))
